<resources>
    <string name="app_name">BookMyHotel</string>
    <string name="app_tag_line">Experience a Comfortable Stay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_list_tab">Hotels</string>
    <string name="user_profile_tab">Profile</string>
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_header_name">John Doe</string>
    <string name="nav_header_email">johndoe@email.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Information</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_help">Help</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hotel_list_empty_text">Empty</string>
    <string name="login_title">Log In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Log In</string>
    <string name="signup_text">Don\'t have an account? Sign up here!</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="signup">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="already_have_account">Already have an account? Log In</string>
    <string name="error_username">Please enter your username</string>
    <string name="error_email">Please enter your email</string>
    <string name="error_password">Please enter your password</string>
    <string name="error_password_length">Password should be at least 6 characters long</string>
    <string name="booking_guests_and_price">Number of Rooms: %1$s, Total Price: %2$s</string>
    <string name="booking_check_in_out">CheckIn Date: %1$s - CheckOut Date: %2$s</string>
    <string name="wallet_icon_description">Wallet Icon</string>
    <string name="add_balance_title">Add Balance</string>
    <string name="add_balance_message">Enter the amount to add to your balance:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="current_balance_label">Current Balance: $%1$s</string>
    <string name="google_maps_key">AIzaSyAMe2ntaLKlYtoc_2Ie4A8Yu_nOQsQkKVY</string>


</resources>